fixed whitespace

--- a/style.css
+++ b/style.css
@@ -68,9 +68,9 @@ p
     margin-bottom: 0;
 }
 
-section
+#SUBCONTAINER
 {
-    padding: 15px 75px 15px 75px;
+    padding: 25px;
 }
 
 a
